entity_macros/tests/ui/derive/ent/too-many-attr-inside-ent-attr.stderr
error: Duplicate field `created` at created
 --> $DIR/too-many-attr-inside-ent-attr.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
